tests/ctu/fail/infinite-struct.ct
struct A {
    b: B
}

struct B {
    a: A
}